[package]
name = "lib_voxels_application_proc"
version = "0.0.0"
authors = ["jacob evans"]
description = "Procedual macros for lib-voxels-application"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
lib-voxels-application-core={git = "https://github.com/Oxyn4/lib-voxels-application-core"}
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
toml = "0.8.20"

